# xMacrosDemo

./: CMakeLists.txt  device_data.c  device_data.h  device_data.xdef  main.c  x macros.txt
